Fix table issues on endOfLevel
Table cells were not aligned

--- a/src/css/endOfLevel/endOfLevel.less
+++ b/src/css/endOfLevel/endOfLevel.less
@@ -10,20 +10,22 @@
     background-color: #CED1D2;
     border-radius: 4% ~"/" 5%;
     display: none;
+
+    .container {
+        padding: 1.4% 0.8%;
+        background-color: #67D6C5;
+        height: 72%;
+        width: 94%;
+        position: relative;
+        left: 3%;
+        right: 3%;
+
+        box-sizing: border-box;
+        overflow: hidden;
+    }
 }
 
-.container {
-    padding: 1.4% 0.8%;
-    background-color: #67D6C5;
-    height: 72%;
-    width: 94%;
-    position: relative;
-    left: 3%;
-    right: 3%;
 
-    box-sizing: border-box;
-    overflow: hidden;
-}
 
 #scoreContainer {
     background-color: white;
@@ -102,6 +104,7 @@
     display: block;
 
     thead {
+        background-color: white;
         display: block;
         width: 100%;
         height: 10%;
@@ -139,17 +142,18 @@
         font-size: 1.4em;
     }
 
-    th.scores {
-        padding: 0 53px 0 0;
+    th.score {
+        padding: 0 14px 0 0;
+        box-sizing: content-box;
     }
 
-    th.actions, td.actions {
-        flex-grow: 3;
+    th.title, td.title {
+        width: 70%;
         display: inline-block;
     }
 
-    th.scores, td.scores {
-        flex-grow: 1;
+    th.score, td.score {
+        width: 30%;
         display: inline-block;
         border-left: 1px solid black;
     }
